@@ -14,6 +14,9 @@ Changes
 Fixes
 -----
 
+ - Replicates shards in the ``Unassigned`` row of the Shards view 
+   are now grouped by id.
+
  - Fixed issue that caused closed partitions to show a ``CRITICAL`` 
    data state.
 
